--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ streamlit
 numpy
 pandas
 scikit-learn
+faiss-cpu
  # Or whatever ML library you used (e.g., tensorflow)
 # Add any other libraries your app imports!
